ProRob/log/build_2025-01-21_08-48-09/package_master/stderr.log
  File "/home/rouillon/ProRob/install/package_master/lib/python3.10/site-packages/package_master/drone_node.py", line 100
    Lancer IsReadyService après SendPosService
           ^^^^^^^^^^^^^^
SyntaxError: invalid syntax

